[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlr"]

[project]
name = "nrel-dlr"
version = "0.0.1"
authors = [
    { name = "Patrick R. Brown", email = "patrick.brown@nrel.gov" },
    { name = "Kodi Obika", email = "kodi.obika@nrel.gov" },
]
description = "A tool for estimating dynamic transmission line ratings (DLR) using weather data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cmocean~=4.0",
    "fiona~=1.10",
    "folium~=0.18",
    "geopandas~=1.0",
    "h5py~=3.12",
    "h5pyd~=0.18",
    "matplotlib~=3.9",
    "numpy~=2.1",
    "pandas~=2.2",
    "rasterio~=1.4",
    "requests~=2.32",
    "scipy~=1.14",
    "shapely~=2.0",
    "tables~=3.10",
    "tqdm~=4.66",
    "pyproj~=3.7"
]

[project.optional-dependencies]
notebook = [
    "ipykernel~=6.29",
    "ipywidgets~=8.1",
    "notebook~=6.5",
    "mapclassify~=2.8"
]

[project.urls]
Homepage = "https://github.com/NREL/DynamicLineRatings"